es-proxy/pkg/middleware/testdata/flow_logs_valid_preview_2.json
{
  "verb": "delete",
  "networkPolicy": {
    "apiVersion": "projectcalico.org/v3",
    "kind": "GlobalNetworkPolicy",
    "metadata": {
      "name": "default.calico-node-alertmanager-mesh-global",
      "uid": "b795266b-a8f9-46f0-9a99-03369dec3d08",
      "resourceVersion": "2613",
      "creationTimestamp": "2019-11-18T18:24:03Z"
    }
  }
}
